<resources>
    <string name="app_name">Navigation View Demo</string>
    <string name="title_activity_main">Nav Demo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Item 1</string>
    <string name="navigation_item_2">Item 2</string>
    <string name="navigation_item_3">Item 3</string>
    <string name="navigation_item_4">Item 4</string>
    <string name="navigation_item_5">Item 5</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_second">Second</string>
    <string name="text_second_activity">Hi Its Second Activity Here</string>
    <string name="title_activity_third">Third</string>
    <string name="text_third_activity">Hi Its Third Activity</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="title_activity_fourth">Mr Four</string>
</resources>
